<resources>
    <string name="app_name">Habitizer</string>
    <string name="text_name">TextName</string>
    <string name="img_name">ImgName</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="taskImg" />
    <string name="_0">0</string>
    <string name="m">m</string>
    <string name="of">of</string>
    <string name="uncompletedTaskString">-</string>
    <string name="ff_button">TODO</string>
    <string name="stop_button">TODO</string>
    <string name="create_a_routine">Create a Routine</string>
</resources>